syntax = "proto3";

option java_package = "cn.stream2000.railgunmq.core"; // 指定包名
option java_outer_classname = "ProducerMessage"; // 指定类名
import "message.proto";

message CreateChannelRequest {
  bool ack = 1;
}

message CreateChannelResponse {
  string channel_id = 1;
}

message PubMessageRequest {
  string channel_id = 1;
  int32 letter_id = 2;
  string topic = 3;
  enum payload_type {
    Text = 0;
    Binary = 1;
    Integer = 2;
  }
  payload_type type = 4;
  bytes data = 5;
}

message PubMessageAck {
  string channel_id = 1;
  int32 letter_id = 2;
  ErrorType error = 3;
  string error_message = 4;
}

message SetChannelName {
  string channel_id = 1;
  int32 letter_id = 2;
  string newname = 3;
}

message Disconnect {
  string channel_id = 1;
  int32 letter_id = 2;
}
